# pet_care

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  locust.conf  ports.yaml  prestart.sh  pyproject.toml
docker-build/app/: Dockerfile
docker-compose/: app.yaml  load_tests.yaml  monitoring.yaml  networks.yaml  storages.yaml
docker_compose/: app.yaml  docker-compose.override.yaml  load_tests.yaml  monitoring.yaml  storages.yaml
fastapi-application/: create_fastapi_app.py  error_handlers.py  export_openapi.py  main.py  prestart.sh
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2025_06_01_2234-1048d9f6d0ea_create_users_table.py  2025_06_03_0736-eace13a2d248_create_users_table.py  2025_06_05_0735-1a4e20ff31c0_create_pet_table.py  2025_06_05_0810-3ac3694046da_create_pet_table.py  2025_06_07_1231-a3f69794f4f8_create_pet_note_table.py  2025_06_07_1307-af2057ea2461_update_pet_note_table.py  2025_06_07_1315-960bc8c4da0f_update_pet_note_table.py  2025_06_09_2057-df7eda6641c7_create_pet_table.py  2025_06_10_1006-bcfa0cdbbf4e_create_pet_note_table.py  2025_06_10_1015-9a73c0970694_create_expense_entry_table.py  2025_06_10_1423-b46454b58e50_create_medical_record_table.py  2025_06_19_1459-b53c8f10a78e_update_foreign_keys_medical_record_table.py  2025_07_05_1606-3a38ccc0fe25_add_image_url_field_to_pet_model.py  2025_07_10_1400-d88ebc5bc200_add_document_url_field_to_mr_instead_of_.py
fastapi-application/api/: __init__.py
fastapi-application/aws/: __init__.py  client.py  config.py
fastapi-application/core/: config.py
fastapi-application/crud/: __init__.py  service.py  views_factory.py
fastapi-application/crud_router/: __init__.py  crud_router.py
fastapi-application/dependencies/: current_active_user.py
fastapi-application/s3/: client.py
fastapi-application/utils/: case_converter.py
gradio-application/: app_openapi.py
monitoring/: prometheus.yaml
monitoring/grafana-dashboards/: dashboard-1778017051462.json
monitoring/prometheus/: prometheus.yml
specs/: full_openapi.json
tests/load/: load_testing.mk
tests/load/locust/: Dockerfile  (+1 more)
(+81 files in other folders)
