[tool.poetry]
package-mode = false

[project]
name = "pet-care"
version = "0.1.0"
description = ""
authors = [
    { name = "k1ttywh1t9", email = "k1ttywh1t9@gmail.com" }
]
license = { text = "mit" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "aiobotocore (>=2.23.0,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
