[tool.poetry]
name = "pet-care"
version = "0.1.0"
description = "A simple pet care application"
authors = ["k1ttywh1t9 <k1ttywh1t9@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic-settings = "^2.9.1"
pydantic = {extras = ["email"], version = "^2.11.5"}
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
aiobotocore = "^2.23.0"
orjson = "^3.10.18"
gradio = "^5.45.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
httpx = "^0.28.1"

[tool.poetry.group.monitoring.dependencies]
prometheus-client = "^0.25.0"
prometheus-fastapi-instrumentator = "^7.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
